minikube/ecommerce-client/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-client
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecommerce-client
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25% 
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: ecommerce-client
    spec:
      containers:
      - name: ecommerce-client
        image: mitratech/ecommerce-client:stable
        imagePullPolicy: Always
        resources:
          limits:
            cpu: '0.5'
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 150Mi
        ports:
        - name: frontend
          containerPort: 80
