minikube/ecommerce-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-client
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: ecommerce-client
  ports:
  - name: client
    port: 80
    targetPort: client
    protocol: TCP
